--- a/GameOfNumbers.csproj
+++ b/GameOfNumbers.csproj
@@ -52,12 +52,15 @@
     <Compile Include="Human_Form.Designer.cs">
       <DependentUpon>Human_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Neural_Network\Fitnes_Chainging.cs" />
     <Compile Include="NewGame_Form.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NewGame_Form.Designer.cs">
       <DependentUpon>NewGame_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Neural_Network\NeuralNetwork.cs" />
+    <Compile Include="Players\NeuralNetwork_Player.cs" />
     <Compile Include="Players\Player_Type.cs" />
     <Compile Include="Players\Random_Player.cs" />
     <Compile Include="Game.cs" />
@@ -69,13 +72,23 @@
     </Compile>
     <Compile Include="Players\Human_Player.cs" />
     <Compile Include="Players\Player.cs" />
+    <Compile Include="RoundData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Neural_Network\Training_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Neural_Network\Training_Form.Designer.cs">
+      <DependentUpon>Training_Form.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Game_Form.resx">
       <DependentUpon>Game_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Human_Form.resx">
       <DependentUpon>Human_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Neural_Network\Training_Form.resx">
+      <DependentUpon>Training_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewGame_Form.resx">
       <DependentUpon>NewGame_Form.cs</DependentUpon>
